# zk-risc-v-vm

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: simple_program.rs
src/: lib.rs  main.rs
src/loader/: elf.rs  linker.rs  mod.rs
src/risc_v/: decoder.rs  instructions.rs  isa.rs  mod.rs  registers.rs
src/utils/: config.rs  error.rs  mod.rs
src/vm/: cpu.rs  executor.rs  memory.rs  mod.rs  syscalls.rs
src/zk/: circuit.rs  constraints.rs  mod.rs  prover.rs  setup.rs  verifier.rs
tests/: execution_tests.rs  integration_tests.rs
